fix: wrong scrollbar position with many items (#269)

--- a/docs/assets/scss/examples.scss
+++ b/docs/assets/scss/examples.scss
@@ -20,6 +20,7 @@
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 
